# CaffeineEngine

./: .gitignore  CMakeLists.txt  Covert_GL.sln
Covert_GL/: CMakeLists.txt  Covert_GL.vcxproj  Covert_GL.vcxproj.filters  CumulativeErrorLog.txt  Engine.cpp  Engine.h  ErrorLog.txt  Logger.cpp  Main.cpp
Covert_GL/Debug/: vc141.idb
Covert_GL/Debug/Covert_GL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Covert_GL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Covert_GL/x64/Debug/: vc141.idb
Covert_GL/x64/Debug/Covert_GL.tlog/: Covert_GL.lastbuildstate
Debug/: Covert_GL.ilk
